imported net core branch from other repo

--- a/Application/EdFi.Ods.SwaggerUI/default.html
+++ b/Application/EdFi.Ods.SwaggerUI/default.html
@@ -216,10 +216,10 @@
         // maps the json data from the metadata url to the sections variable
         function mapSections(json) {
             json.forEach(function (data) {
-                var prefix = data.Prefix === "" ? "Resources" : data.Prefix
+                var prefix = data.prefix === "" ? "Resources" : data.prefix
                 if (sections[prefix] == null) sections[prefix] = { color: '', description: '', links: [] }
 
-                var link = { name: data.Name, uri: data.EndpointUri }
+                var link = { name: data.name, uri: data.endpointUri }
                 sections[prefix].links.push(link)
             });
             console.log('sections', sections)
@@ -287,6 +287,7 @@
                     createSections()
                 })
                 .catch(function (ex) {
+                    console.log(ex)
                     showError("Failed to retrieve resources from " + window.appSettings.webApiMetadataUrl)
                     hideProgress()
                 })
